--- a/Helm/tick/manifests/ingress.yaml
+++ b/Helm/tick/manifests/ingress.yaml
@@ -1,22 +1,28 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: tick
   annotations:
-      kubernetes.io/ingress.class: nginx
+    kubernetes.io/ingress.class: nginx
 spec:
   rules:
-  - host: telegraf.tick.com
-    http:
-      paths:
-      - path: /
-        backend:
-          serviceName: telegraf
-          servicePort: 8186
-  - host: chronograf.tick.com
-    http:
-      paths:
-      - path: /
-        backend:
-          serviceName: chronograf
-          servicePort: 8888
+    - host: telegraf.tick.com
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: telegraf
+                port:
+                  number: 8186
+    - host: chronograf.tick.com
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: chronograf
+                port:
+                  number: 8888
